Attempting to fix image not displaying on Safari

--- a/index.css
+++ b/index.css
@@ -18,8 +18,8 @@ button {
 }
 
 #icon {
-  min-width: 100px;
-  min-height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 #temp {
